Use modular configuration to launch JUnit Platform Console in-process